# pmtest

./: .gitignore  .python-version  algo_b_output.txt  algo_b_output_func.txt  new_algorithm.md  pyproject.toml
data/DayTrader/: console.log-flow-113.txt-lab.txt  console.log-flow-124.txt-lab.txt  console.log-flow-179.txt-lab.txt  console.log-flow-200.txt-lab.txt  console.log-flow-205.txt-lab.txt  console.log-flow-215.txt-lab.txt  console.log-flow-217.txt-lab.txt  console.log-flow-219.txt-lab.txt  console.log-flow-241.txt-lab.txt  console.log-flow-265.txt-lab.txt  console.log-flow-64.txt-lab.txt  console.log-flow-67.txt-lab.txt  console.log-flow-97.txt-lab.txt
data/DayTrader2/: console.log-flow-100-lab.txt  console.log-flow-101-lab.txt  console.log-flow-121-lab.txt  console.log-flow-131-lab.txt  console.log-flow-153-lab.txt  console.log-flow-161-lab.txt  console.log-flow-163-lab.txt  console.log-flow-167-lab.txt  console.log-flow-171-lab.txt  console.log-flow-176-lab.txt  console.log-flow-188-lab.txt  console.log-flow-195-lab.txt  console.log-flow-198-lab.txt  console.log-flow-203-lab.txt  console.log-flow-207-lab.txt  console.log-flow-209-lab.txt  console.log-flow-226-lab.txt  console.log-flow-229-lab.txt  console.log-flow-234-lab.txt  console.log-flow-237-lab.txt  console.log-flow-238-lab.txt  console.log-flow-240-lab.txt  console.log-flow-246-lab.txt  console.log-flow-250-lab.txt  console.log-flow-263-lab.txt  console.log-flow-267-lab.txt  console.log-flow-28-lab.txt  (+14 more)
pmtest/: __init__.py  dependency_matrix.py  graphs.py  mine.py  parse.py  pm4py_test.py  stats.py
(+28 files in other folders)
